# 3c_flight_tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  tres_cantos_flight_tracker_spec.md
.streamlit/: config.toml  secrets.toml.example
data/: analysis_results.json  config_sur_monthly.csv  config_sur_vs_tmr16.csv  tmr16_aggregated.csv  tmr16_monthly_ocr.csv  tmr16_raw_readings.csv  tmr16_validation.md
doc/: aena_noise_data_analysis.md  analisis_config_sur_vs_tmr16.md  historia_tmr.md  investigacion_ruido_tres_cantos.md  normativa_comparada.md  urls
doc/aena/informes_mensuales_ruido/: README.md
scripts/: analyze_crossed.py  build_crossed_dataset.py  extract_config_sur.py  generate_sample_data.py  ocr_tmr16_monthly.py  reaggregate.py
src/: analyzer.py  collector.py  config.py  database.py  noise_extract.py  noise_metrics.py  noise_report_parser.py  noise_viz.py
tests/: conftest.py  test_analyzer.py  test_collector.py  test_database.py  test_noise_metrics.py  test_noise_report_parser.py  test_noise_viz.py
