[project]
name = "flight-tracker"
version = "0.1.0"
description = "Tres Cantos flight tracker - documenting noise impact from Barajas 36L departures"
requires-python = ">=3.12"
dependencies = [
    "traffic>=2.10",
    "streamlit>=1.30",
    "plotly>=5.18",
    "folium>=0.15",
    "streamlit-folium>=0.18",
    "pandas>=2.1,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
